# serializer version: 1
# name: test_binary_sensor_entities_snapshot[binary_sensor.nb123456_cable_lock_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nb123456_cable_lock_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cable lock state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.LOCK: 'lock'>,
    'original_icon': None,
    'original_name': 'Cable lock state',
    'platform': 'nexblue',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'is_lock',
    'unique_id': 'NB123456_is_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_entities_snapshot[binary_sensor.nb123456_cable_lock_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'lock',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NB123456 Cable lock state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nb123456_cable_lock_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_entities_snapshot[binary_sensor.nb123456_charging_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nb123456_charging_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charging enabled',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charging enabled',
    'platform': 'nexblue',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'is_disable',
    'unique_id': 'NB123456_is_disable',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_entities_snapshot[binary_sensor.nb123456_charging_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NB123456 Charging enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nb123456_charging_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
